[project]
name = "template-pdm-circuitpython"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dax Harris", email = "mvh3875@rit.edu"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "click>=8.1.7",
    "rich>=13.7.1",
    "rich-click>=1.8.3",
    "fswatch>=0.1.1",
]
